--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # Copy this file to .env.local and update the values
 
 # API Configuration
-VITE_API_URL=http://192.168.30.206:8777
+VITE_API_URL=http://localhost:8080
 
 # App Configuration
 VITE_APP_NAME=Myosotis
