--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.11",
+    "timelinejs-react": "^1.1.1",
     "zod": "^4.0.15",
     "zustand": "^5.0.7"
   },
