--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.0",
     "tailwindcss": "^4.1.11",
     "timelinejs-react": "^1.1.1",
