--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.84.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
+    "lottie-react": "^2.4.1",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
