--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.62.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.0",
+    "recharts": "^3.1.2",
     "tailwindcss": "^4.1.11",
     "timelinejs-react": "^1.1.1",
     "zod": "^4.0.15",
