--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ VITE_API_URL=http://localhost:8080
 # App Configuration
 VITE_APP_NAME=Myosotis
 VITE_APP_VERSION=1.0.0
+GOOGLE_MAP_API= --- IGNORE ---
