--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.0",
     "recharts": "^3.1.2",
+    "sudoku-gen": "^1.0.2",
     "tailwindcss": "^4.1.11",
     "timelinejs-react": "^1.1.1",
     "zod": "^4.0.15",
