--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@tanstack/react-query": "^5.84.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
+    "i18next": "^25.5.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lottie-react": "^2.4.1",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
+    "react-i18next": "^15.7.3",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.0",
     "recharts": "^3.1.2",
